samples/_failures_safe/1761084802_900c41_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77aca322.c:120:33: error: expected ‘{’ at end of input
  120 | void run_simulation_step(struct SimulationState* sim, const struct
      |                                 ^~~~~~~~~~~~~~~
